[gd_scene load_steps=3 format=3 uid="uid://cksna18h7qs53"]

[ext_resource type="Script" uid="uid://c3xcu8kuwuhoq" path="res://scenes/deck_picker.gd" id="1_vrjel"]
[ext_resource type="Theme" uid="uid://cqy571h4lc1vc" path="res://ui/themes/base_theme.tres" id="2_8j7qj"]

[node name="DeckPickerScene" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_vrjel")

[node name="MainVBox" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="MainVBox"]
layout_mode = 2
theme = ExtResource("2_8j7qj")
text = "Deck Picker"

[node name="ContentVBox" type="VBoxContainer" parent="MainVBox"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="AvailableCardsSection" type="MarginContainer" parent="MainVBox/ContentVBox"]
custom_minimum_size = Vector2(50, 40)
layout_mode = 2

[node name="AvailableCardsVBox" type="VBoxContainer" parent="MainVBox/ContentVBox/AvailableCardsSection"]
layout_mode = 2

[node name="AvailableCardsLabel" type="Label" parent="MainVBox/ContentVBox/AvailableCardsSection/AvailableCardsVBox"]
layout_mode = 2
theme = ExtResource("2_8j7qj")
text = "Available Cards"

[node name="AvailableCardsScroll" type="ScrollContainer" parent="MainVBox/ContentVBox/AvailableCardsSection/AvailableCardsVBox"]
custom_minimum_size = Vector2(200, 800)
layout_mode = 2
size_flags_vertical = 3

[node name="AvailableCardsGrid" type="GridContainer" parent="MainVBox/ContentVBox/AvailableCardsSection/AvailableCardsVBox/AvailableCardsScroll"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
columns = 10

[node name="DeckDisplayVBox" type="VBoxContainer" parent="MainVBox/ContentVBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="PlayerDeckMC" type="MarginContainer" parent="MainVBox/ContentVBox/DeckDisplayVBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="PlayerDeckVBox" type="VBoxContainer" parent="MainVBox/ContentVBox/DeckDisplayVBox/PlayerDeckMC"]
layout_mode = 2

[node name="PlayerDeckLabel" type="Label" parent="MainVBox/ContentVBox/DeckDisplayVBox/PlayerDeckMC/PlayerDeckVBox"]
layout_mode = 2
theme = ExtResource("2_8j7qj")
text = "Player Deck"

[node name="PlayerDeckDisplay" type="HBoxContainer" parent="MainVBox/ContentVBox/DeckDisplayVBox/PlayerDeckMC/PlayerDeckVBox"]
layout_mode = 2

[node name="OpponentDeckPanel" type="MarginContainer" parent="MainVBox/ContentVBox/DeckDisplayVBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="OpponentDeckVBox" type="VBoxContainer" parent="MainVBox/ContentVBox/DeckDisplayVBox/OpponentDeckPanel"]
layout_mode = 2

[node name="OpponentDeckLabel" type="Label" parent="MainVBox/ContentVBox/DeckDisplayVBox/OpponentDeckPanel/OpponentDeckVBox"]
layout_mode = 2
theme = ExtResource("2_8j7qj")
text = "Opponent Deck"

[node name="OpponentDeckDisplay" type="HBoxContainer" parent="MainVBox/ContentVBox/DeckDisplayVBox/OpponentDeckPanel/OpponentDeckVBox"]
layout_mode = 2

[node name="TargetSelectionHBox" type="HBoxContainer" parent="MainVBox/ContentVBox/DeckDisplayVBox"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="AddingToLabel" type="Label" parent="MainVBox/ContentVBox/DeckDisplayVBox/TargetSelectionHBox"]
layout_mode = 2
theme = ExtResource("2_8j7qj")
text = "Adding to:"

[node name="PlayerTargetButton" type="Button" parent="MainVBox/ContentVBox/DeckDisplayVBox/TargetSelectionHBox"]
layout_mode = 2
theme = ExtResource("2_8j7qj")
text = "Player"

[node name="OpponentTargetButton" type="Button" parent="MainVBox/ContentVBox/DeckDisplayVBox/TargetSelectionHBox"]
layout_mode = 2
theme = ExtResource("2_8j7qj")
text = "Opponent"

[node name="BottomHBox" type="HBoxContainer" parent="MainVBox"]
layout_mode = 2

[node name="StartBattleButton" type="Button" parent="MainVBox/BottomHBox"]
layout_mode = 2
theme = ExtResource("2_8j7qj")
text = "Start Battle"

[connection signal="pressed" from="MainVBox/ContentVBox/DeckDisplayVBox/TargetSelectionHBox/PlayerTargetButton" to="." method="_on_player_target_button_pressed"]
[connection signal="pressed" from="MainVBox/ContentVBox/DeckDisplayVBox/TargetSelectionHBox/OpponentTargetButton" to="." method="_on_opponent_target_button_pressed"]
[connection signal="pressed" from="MainVBox/BottomHBox/StartBattleButton" to="." method="_on_start_battle_button_pressed"]
